--- a/usersystem/frontend/menu.html
+++ b/usersystem/frontend/menu.html
@@ -1,203 +1,288 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coffee Shop</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #F8F3E7;
-        }
-        .header {
-            background-color: #5A6E3A;
-            color: white;
-            padding: 15px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-        .logo {
-            display: flex;
-            align-items: center;
-            font-size: 20px;
-            font-weight: bold;
-        }
-        .logo img {
-            width: 40px;
-            height: 40px;
-            margin-right: 10px;
-        }
-        .user-actions {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-        }
-        .user-actions img {
-            width: 30px;
-            height: 30px;
-            cursor: pointer;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Coffee Shop</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f8f3e7;
+      color: #333;
+    }
 
-        .nav {
-            background-color: #C0B48C;
-            padding: 10px;
-            display: flex;
-            align-items: center;
-        }
-        .nav a {
-            text-decoration: none;
-            color: black;
-            padding: 10px 15px;
-        }
-        .nav a:hover {
-            background-color: #B3A57D;
-            border-radius: 5px;
-        }
-        .menu-links {
-            display: flex;
-            gap: 15px;
-        }
-        .search-box {
-            display: flex;
-            align-items: center;
-            background: white;
-            padding: 5px;
-            border-radius: 15px;
-            width: 250px;
-            margin-left: auto;
-        }
-        .search-box input {
-            border: none;
-            outline: none;
-            padding: 5px;
-            width: 100%;
-        }
-        .search-box img {
-            width: 16px;
-            height: 16px;
-            margin-left: 5px;
-            cursor: pointer;
-        }
-        .banner {
-            width: 100%;
-            height: 300px;
-            background: url('images/Home.jpg') no-repeat center center/cover;
-        }
-        .discount {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 20px 0;
-        }
-        .discount img {
-            width: 80%;
-            max-width: 600px;
-            border-radius: 10px;
-        }
-        .menu-section {
-            text-align: center;
-            padding: 20px;
-        }
-        .menu-button {
-            background-color: white;
-            border: 2px solid #5A6E3A;
-            padding: 10px 20px;
-            border-radius: 20px;
-            font-size: 18px;
-            font-weight: bold;
-            cursor: pointer;
-            box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.2);
-            margin-bottom: 20px;
-        }
-        .menu-items {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            flex-wrap: wrap;
-        }
-        .menu-item {
-            text-align: center;
-            background: white;
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
-        }
-        .menu-item img {
-            width: 160px;
-            height: 160px;
-            border-radius: 10px;
-            object-fit: cover;
-        }
-        .menu-item p {
-            font-size: 18px;
-            font-weight: bold;
-            margin-top: 10px;
-            padding: 5px;
-            background-color: #F8F3E7;
-            border-radius: 5px;
-        }
-        .cart-icon {
-            position: fixed;
-            bottom: 20px;
-            right: 20px;
-            width: 50px;
-            height: 50px;
-            cursor: pointer;
-        }
-    </style>
+    /* Header */
+    .header {
+      background-color: #5a6e3a;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 30px;
+    }
+
+    .logo {
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    .user-actions a {
+      color: white;
+      text-decoration: none;
+      margin: 0 5px;
+    }
+
+    .user-actions a:hover {
+      text-decoration: underline;
+    }
+
+    .user-actions img {
+      width: 32px;
+      height: 32px;
+      margin-left: 10px;
+      border-radius: 50%;
+      background-color: white;
+      padding: 3px;
+    }
+
+    /* Navigation */
+    .nav {
+      background-color: #c0b48c;
+      display: flex;
+      align-items: center;
+      padding: 10px 30px;
+    }
+
+    .menu-links {
+      display: flex;
+      gap: 20px;
+    }
+
+    .menu-links a {
+      text-decoration: none;
+      color: #333;
+      padding: 8px 12px;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    .menu-links a:hover {
+      background-color: #b3a57d;
+    }
+
+    .search-box {
+      display: flex;
+      align-items: center;
+      background: white;
+      padding: 5px 12px;
+      border-radius: 20px;
+      margin-left: auto;
+    }
+
+    .search-box input {
+      border: none;
+      outline: none;
+      padding: 5px;
+      width: 180px;
+      font-size: 14px;
+    }
+
+    .search-box img {
+      width: 18px;
+      height: 18px;
+      margin-left: 8px;
+      cursor: pointer;
+    }
+
+    /* Layout */
+    .container {
+      display: flex;
+    }
+
+    .sidebar {
+      width: 220px;
+      background-color: #e2d9c1;
+      padding: 20px;
+      min-height: 100vh;
+    }
+
+    .sidebar h3 {
+      color: #5a6e3a;
+      margin-bottom: 15px;
+    }
+
+    .sidebar ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .sidebar li {
+      margin-bottom: 12px;
+    }
+
+    .sidebar a {
+      text-decoration: none;
+      color: #333;
+      font-weight: 500;
+    }
+
+    .sidebar a:hover {
+      color: #5a6e3a;
+    }
+
+    .content {
+      flex: 1;
+      padding: 30px;
+    }
+
+    .content h2 {
+      color: #5a6e3a;
+      margin-bottom: 15px;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 5px;
+    }
+
+    /* Product Styling */
+    .product-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 40px;
+    }
+
+    .product-item, .menu-item {
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+      text-align: center;
+      padding: 15px;
+      width: 180px;
+      transition: transform 0.2s ease;
+    }
+
+    .product-item:hover, .menu-item:hover {
+      transform: scale(1.05);
+    }
+
+    .product-item img, .menu-item img {
+      width: 100%;
+      height: 160px;
+      object-fit: cover;
+      border-radius: 10px;
+    }
+
+    .label, .menu-item p {
+      margin-top: 10px;
+      font-weight: bold;
+      color: #444;
+    }
+
+    /* Cart */
+    .cart-icon {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.2);
+      transition: transform 0.2s ease;
+    }
+
+    .cart-icon:hover {
+      transform: scale(1.1);
+    }
+  </style>
 </head>
 <body>
-    <div class="header">
-        <div class="logo">
-            ☕ Coffee Shop
-        </div>
-        <div class="user-actions">
-            <a href="login.html">Login</a> | <a href="signin.html">Sign in</a>
-            <img src="images/User icon.png" alt="user">
-        </div>
-    </div>
-    
-    <div class="nav">
-        <div class="menu-links">
-            <a href="#">HOME</a>
-            <a href="#">MENU</a>
-            <a href="#">Track Status</a>
-            <a href="#">ABOUT US</a>
-            <a href="#">FAQ</a>
-        </div>
-        <div class="search-box">
-            <input type="text" placeholder="ค้นหา">
-            <img src="images/ค้นหา.jpg" alt="search">
-        </div>
-    </div>
 
-    <div class="banner"></div>
-
-    <div class="discount">
-        <img src="images/ส่วนลด.png" alt="ส่วนลด">
+  <div class="header">
+    <div class="logo">☕ Coffee Shop</div>
+    <div class="user-actions">
+      <a href="login.html">Login</a> | <a href="signin.html">Sign in</a>
+      <img src="images/User icon.png" alt="user" />
     </div>
+  </div>
 
-    <div class="menu-section">
-        <button class="menu-button">เมนูแนะนำ</button>
-        <div class="menu-items">
-            <div class="menu-item">
-                <img src="images/ชาไทย.jpg" alt="ชาไทย">
-                <p>ชาไทย</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/มอคค่า.jpg" alt="มอคค่า">
-                <p>มอคค่า</p>
-            </div>
-            <div class="menu-item">
-                <img src="images/กาแฟ-ส้ม.jpg" alt="กาแฟ-ส้ม">
-                <p>กาแฟ-ส้ม</p>
-            </div>
-        </div>
+  <div class="nav">
+    <div class="menu-links">
+      <a href="#">HOME</a>
+      <a href="#">MENU</a>
+      <a href="#">Track Status</a>
+      <a href="#">ABOUT US</a>
+      <a href="#">FAQ</a>
+    </div>
+    <div class="search-box">
+      <input type="text" placeholder="ค้นหา" />
+      <img src="images/ค้นหา.jpg" alt="search" />
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="sidebar">
+      <h3>MENU</h3>
+      <ul>
+        <li><a href="#">All Menu</a></li>
+        <li><a href="#">Coffee</a></li>
+        <li><a href="#">Tea</a></li>
+        <li><a href="#">Fresh Milk | Chocolate</a></li>
+        <li><a href="#">Cake</a></li>
+      </ul>
     </div>
 
-    <img src="images/รถเข็น.jpeg" alt="cart" class="cart-icon">
+    <div class="content">
+      <h2 id="coffee">Coffee</h2>
+      <div class="product-list">
+        <div class="product-item">
+          <img src="images/มอคค่า.jpg" alt="Mocha">
+          <div class="label">Mocha</div>
+        </div>
+        <div class="product-item">
+          <img src="images/กาแฟ-ส้ม.jpg" alt="Orange Coffee">
+          <div class="label">Orange Coffee</div>
+        </div>
+        <div class="product-item">
+          <img src="images/อมเริกาโน่.jpg" alt="Americano">
+          <div class="label">Americano</div>
+        </div>
+      </div>
+
+      <h2 id="cake">Cake</h2>
+      <div class="product-list">
+        <div class="product-item">
+          <img src="images/ เค้กสตอเบอร์รี่.jpg" alt="Strawberry Cake">
+          <div class="label">Strawberry Cake</div>
+        </div>
+        <div class="product-item">
+          <img src="images/เค้กส้ม .jpg" alt="Orange Cake">
+          <div class="label">Orange Cake</div>
+        </div>
+        <div class="product-item">
+          <img src="images/เค้กช็อกโกแลต.jpg" alt="Chocolate Cake">
+          <div class="label">Chocolate Cake</div>
+        </div>
+      </div>
+
+      <h2 id="tea">Tea</h2>
+      <div class="product-list">
+        <div class="product-item">
+          <img src="images/ชาไทย.jpg" alt="ชาไทย">
+          <div class="label">ชาไทย</div>
+        </div>
+        <div class="product-item">
+          <img src="images/ชาเขียว.jpg" alt="ชาเขียว">
+          <div class="label">ชาเขียว</div>
+        </div>
+        <div class="product-item">
+          <img src="images/ชามะนาว.jpg" alt="ชามะนาว">
+          <div class="label">ชามะนาว</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <img src="images/รถเข็น.jpeg" alt="cart" class="cart-icon" />
+
 </body>
 </html>
