--- a/usersystem/frontend/follow.html
+++ b/usersystem/frontend/follow.html
@@ -14,7 +14,7 @@
 
     /* Header */
     .header {
-      background-color: #779d65;
+      background-color: #466738;
       color: white;
       display: flex;
       justify-content: space-between;
@@ -46,7 +46,7 @@
 
    
     .nav {
-      background-color: #a8c997;
+      background-color: #c9c897;
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -100,7 +100,7 @@
     }
 
     .track-order-container {
-      background-color: #e9f0e2;
+      background-color: #e2d9c1;
       padding: 25px;
       border-radius: 12px;
       box-shadow: 0 6px 15px rgba(0, 0, 0, 0.08);
@@ -175,15 +175,15 @@
     }
 
     .status-item.active {
-      background-color: #a8c997;
+      background-color: #687e5d;
       color: white;
       font-weight: bold;
     }
 
     .status-item.in-progress {
-      background-color: #d1c29d;
-      color: white;
-      font-weight: bold;
+      background-color: #dcdcdc;
+      color: #555;
+      font-size: 14px;
     }
   </style>
 </head>
